--- a/index3.html
+++ b/index3.html
@@ -14,10 +14,10 @@
 
 <body>
     <div class="header">
-        <a href="http://127.0.0.1:5500/index.html" class="head">Home</a>
-        <a href="http://127.0.0.1:5500/index2.html" class="head">About Us</a>
-        <a href="http://127.0.0.1:5500/index3.html" class="head">Services</a>
-    </div>
+        <a href="/index.html" class="head">Home</a>
+        <a href="/index2.html" class="head">About Us</a>
+        <a href="#" class="head">Services</a>
+     </div>
     <div class="container">
         <img src="/images/moon-icon.png" id="icon" onclick="switchMode()">
         <h1>Our Brand</h1>
