--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="header">
-       <a href="http://127.0.0.1:5500/index.html" class="head">Home</a>
-       <a href="http://127.0.0.1:5500/index2.html" class="head">About Us</a>
-       <a href="http://127.0.0.1:5500/index3.html" class="head">Services</a>
+       <a href="#" class="head">Home</a>
+       <a href="/index2.html" class="head">About Us</a>
+       <a href="/index3.html" class="head">Services</a>
     </div>
     <div class="container">
         <div class="whitebackground">
