--- a/index2.html
+++ b/index2.html
@@ -8,13 +8,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="stylesheet" href="/style2.css">
 </head>
 <body>
     <div class="header">
-        <a href="http://127.0.0.1:5500/index.html" class="head">Home</a>
-        <a href="http://127.0.0.1:5500/index2.html" class="head">About Us</a>
-        <a href="http://127.0.0.1:5500/index3.html" class="head">Services</a>
+        <a href="/index.html" class="head">Home</a>
+        <a href="#" class="head">About Us</a>
+        <a href="/index3.html" class="head">Services</a>
      </div>
     <div class="container">
         <div class="side">
