--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <div class="header">
        <a href="#" class="head">Home</a>
-       <a href="/index2.html" class="head">About Us</a>
-       <a href="/index3.html" class="head">Services</a>
+       <a href="/about.html" class="head">About Us</a>
+       <a href="/services.html" class="head">Services</a>
     </div>
     <div class="container">
         <div class="whitebackground">
@@ -22,8 +22,8 @@
                 <h5>FRONTEND DEVELOPER</h5>
                 <h1>I'm Oluwatosin <br>Omounla </h1>
                 <div class="btn">
-                    <button class="bot">MORE ABOUT ME <img src="/images/arrow-icon-28.png" alt=""></button>
-                    <button class="bat">HIRE ME <img src="/images/arrow-icon-28.png" alt=""></button>
+                    <button class="bot">MORE ABOUT ME <img src="arrow-icon-28.png" alt=""></button>
+                    <button class="bat">HIRE ME <img src="arrow-icon-28.png" alt=""></button>
                 </div>
             </div>
             <div class="footer">
@@ -31,10 +31,10 @@
             </div>
         </div>
         <div class="pictureimage">
-            <img src="/images/moon-icon.png" id="icon" onclick="switchMode()">
+            <img src="moon-icon.png" id="icon" onclick="switchMode()">
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
