--- a/services.html
+++ b/services.html
@@ -9,17 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style3.css">
+    <link rel="stylesheet" href="/style3.css">
 </head>
 
 <body>
     <div class="header">
         <a href="/index.html" class="head">Home</a>
-        <a href="/index2.html" class="head">About Us</a>
+        <a href="/about.html" class="head">About Us</a>
         <a href="#" class="head">Services</a>
      </div>
     <div class="container">
-        <img src="/images/moon-icon.png" id="icon" onclick="switchMode()">
+        <img src="moon-icon.png" id="icon" onclick="switchMode()">
         <h1>Our Brand</h1>
         <div class="innercontainer">
             <div class="mission">
@@ -47,7 +47,7 @@
     </div>
     </div>
     </div>
-    <script src="/js/style3.js"></script>
+    <script src="/script3.js"></script>
 </body>
 
 </html>
