--- a/services.html
+++ b/services.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="/style3.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 
 <body>
     <div class="header">
-        <a href="/index.html" class="head">Home</a>
-        <a href="/about.html" class="head">About Us</a>
+        <a href="index.html" class="head">Home</a>
+        <a href="about.html" class="head">About Us</a>
         <a href="#" class="head">Services</a>
      </div>
     <div class="container">
@@ -47,7 +47,7 @@
     </div>
     </div>
     </div>
-    <script src="/script3.js"></script>
+    <script src="script3.js"></script>
 </body>
 
 </html>
