--- a/about.html
+++ b/about.html
@@ -8,17 +8,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="/style2.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="header">
-        <a href="/index.html" class="head">Home</a>
+        <a href="index.html" class="head">Home</a>
         <a href="#" class="head">About Us</a>
-        <a href="/services.html" class="head">Services</a>
+        <a href="services.html" class="head">Services</a>
      </div>
     <div class="container">
         <div class="side">
-            <img src="/moon-icon.png" id="icon" onclick="switchMode()">
+            <img src="moon-icon.png" id="icon" onclick="switchMode()">
             <h1>Oluwatosin Omooba</h1>
             <h3>i'm no longer a slave to fear, i'm a living testimony i can't do without him 
                 in my life because has given me a victory. i'm in love with Jesus and is in love 
@@ -27,10 +27,10 @@
             </h3>
         </div>
         <div class="sid">
-            <img src="/IMG_20230304_093510.jpg">
+            <img src="IMG_20230304_093510.jpg">
     
         </div>
     </div>
-    <script src="/script2.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
