--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="header">
        <a href="#" class="head">Home</a>
-       <a href="/about.html" class="head">About Us</a>
-       <a href="/services.html" class="head">Services</a>
+       <a href="about.html" class="head">About Us</a>
+       <a href="services.html" class="head">Services</a>
     </div>
     <div class="container">
         <div class="whitebackground">
